# YadroComputerClub

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp
src/event_handler/: CMakeLists.txt  EventHandler.cpp  EventHandler.h
src/file_parser/: CMakeLists.txt  FileParser.cpp  FileParser.h
src/task_solver/: CMakeLists.txt  TaskSolver.cpp  TaskSolver.h
src/utils/: CMakeLists.txt  Constants.h  ErrorTypes.h  InputFileData.h
test/: CMakeLists.txt  YadroComputerClubTest.cpp
test/resource/test_parse_file/: IncorrectClientName.txt  IncorrectClosingTimeFormat.txt  IncorrectCostPerHour.txt  IncorrectEventBodyForSecondID.txt  IncorrectEventID.txt  IncorrectEventTime.txt  IncorrectOpeningTimeFormat.txt  IncorrectTableNumber.txt  IncorrectWorkingHoursFormat.txt  NoDelimitersInEventDescription.txt  OneDelimiterInEventDescription.txt  SeveralSyntaxMistakes.txt
test/resource/test_semantic_errors_in_input_file_data/: EventTimeIsNotLessThanClosingTime.txt  IncorrectEventTimeSequence.txt  OpeningTimeIsNotLessThanClosingTime.txt  TableNumberMoreThanNumberOfTables.txt
test/resource/test_success_output_result/: AllMistakesAndEventIDs.txt
